# measure

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  test_measure.py
.github/workflows/: ci.yml
data/alpacare/claude-2/: iCliniq_output.jsonl
data/alpacare/gpt-3.5-turbo/: iCliniq_output.jsonl
data/alpacare/gpt-4/: iCliniq_output.jsonl
data/alpacare/text-davinci-003/: iCliniq_output.jsonl
data/mimic-iii-test/: test.parquet  train.parquet
measure/: __init__.py  downstream_tasks.py  fid_metric.py  measure.py  privacy.py  semantic.py  text_attack.py
measure/utils/: gpt_eval.py  text_attack.py
measure/utils/downstream_tasks/: caml.py  gpt_eval.py  mimic_iii.py
measure/utils/privacy/: author_attack.py  ppl_score.py
measure/utils/semantic/: fid.py
