[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measure"
version = "0.1.0"
description = "A Python library for measurements and calculations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Simon Meoni", email = "simonmeoni@aol.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Add your dependencies here
]

[project.urls]
Homepage = "https://github.com/simonmeoni/measure"
Repository = "https://github.com/simonmeoni/measure"
Issues = "https://github.com/simonmeoni/measure/issues"