[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "measure"
version = "0.3.3"
description = "A Python library for measurements and calculations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Simon Meoni", email = "simonmeoni@aol.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "accelerate==1.7.0",
    "bert-score==0.3.13",
    "datasets==3.6.0",
    "evaluate==0.4.3",
    "mauve-text==0.4.0",
    "openai==1.66.3",
    "pandas>=1.3.0",
    "protobuf==6.31.1",
    "pycanon==1.0.5",
    "python-dotenv==1.0.0",
    "rouge_score==0.1.2",
    "sacrebleu==2.5.1",
    "sentence-transformers==4.1.0",
    "sentencepiece==0.2.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "transformers==4.50.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "pytest>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/simonmeoni/measure"
Repository = "https://github.com/simonmeoni/measure"
Issues = "https://github.com/simonmeoni/measure/issues"

[tool.uv]
dev-dependencies = [
    "pre-commit==4.2.0",
    "pytest>=6.0.0",
]
